2009-05-02  Rusty Howell  <rhowell@novell.com>

	* Makefile.am: Added xpi FF bridges to xpi

2009-04-22  Rusty Howell  <rhowell@novell.com>

	* Remove GAC from xpi. 

2009-01-20  Marek Habersack  <mhabersack@novell.com>

	* Makefile.am (novell-moonlight.xpi): moonlight.exe no longer
	exists

2009-01-12  Jb Evain  <jbevain@novell.com>

	* Makefile.am: remove references to moonlight.cs and moonlight.exe.
	Install the assemblies in the plugin gac for the 2.1 profile.

2008-11-12  Rusty Howell  <rhowell@novell.com>

	* install.rdf.in: Add macros for updateURL

2008-08-17  Chris Toshok  <toshok@ximian.com>

	* Makefile.am: INCLUDE_MONO_RUNTIME ->
	INCLUDE_BROWSER_MANAGED_CODE.

2008-05-27  Andrew Jorgensen  <ajorgensen@novell.com>

	* Makefile.am: firefox bridges got moved

2008-05-16  Andrew Jorgensen  <ajorgensen@novell.com>

	* Makefile.am: Dist the files from the previous checkin

2008-05-15  Andrew Jorgensen  <ajorgensen@novell.com>

	* install.rdf.in, chrome.manifest, icon.png, Makefile.am: Add our spiffy
	logo to the firefox extension.  (Needs to be replace by a nicer one some
	day but it's not bad).

2008-05-15  Andrew Jorgensen  <ajorgensen@novell.com>

	* install.rdf.in: Use targetPlatform to restrict installation to
	the supported platform.  Fixes bnc#390873